--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div>
       <img
         class="thesuit"
-        src="thesuit.jpg"
+        src="./images/thesuit.jpg"
         alt=""
          ;"
       />
